objects/Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Condition_Precedent_Subsequent__c</fullName>
        <label>Condition Precedent/Subsequent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condition Precedent</fullName>
                </value>
                <value>
                    <fullName>Condition Subsequent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Specifics__c</fullName>
        <label>Condition Specifics</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Condition_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory Title Insurance</fullName>
                </value>
                <value>
                    <fullName>Each Guarantor will formally acknowledge each is aware of the terms and conditions of finance either by being party to the Facility Agreement or the execution of a separate document.</fullName>
                </value>
                <value>
                    <fullName>A certified budget including 3-year historic &amp; forecast statement of financial position, statement of financial performance &amp; cashflow statement financial model, detailing discretionary &amp; non-discretionary Capital Expenditure for the next number of years</fullName>
                </value>
                <value>
                    <fullName>Duly executed by the Obligors and where appropriate in a registrable form</fullName>
                </value>
                <value>
                    <fullName>From the Financier’s counsel in relation to the Transaction Documentation</fullName>
                </value>
                <value>
                    <fullName>A copy of the Borrower’s most recent audited financial reports</fullName>
                </value>
                <value>
                    <fullName>Certified copies of all Material Contracts</fullName>
                </value>
                <value>
                    <fullName>A copy of the corporate structure of the Borrower and its subsidiaries</fullName>
                </value>
                <value>
                    <fullName>Each shareholder agreement (if any)</fullName>
                </value>
                <value>
                    <fullName>All fees and expenses, including all applicable taxes (including stamp duty) which are due</fullName>
                </value>
                <value>
                    <fullName>A certificate signed by two directors of the Borrower certifying among other matters required by the Financier, its solvency and constituent documents and no Material Adverse Effect has occurred</fullName>
                </value>
                <value>
                    <fullName>Title to mortgaged property</fullName>
                </value>
                <value>
                    <fullName>The Financier is noted on insurance documents as first mortgagee over all assets and undertakings of the Obligors.</fullName>
                </value>
                <value>
                    <fullName>Evidence that satisfactory keyman insurance has been taken out in respect of all Key Management</fullName>
                </value>
                <value>
                    <fullName>Corporate benefit and that there is no breach of Chapter 2E or Part 2J.3 of the Corporations Act</fullName>
                </value>
                <value>
                    <fullName>All necessary corporate and regulatory approvals and consents have been obtained and remain in full force and effect</fullName>
                </value>
                <value>
                    <fullName>The hedging policies of the Borrower (including in respect of interest rate and foreign exchange) which must be to the satisfaction of the Financier</fullName>
                </value>
                <value>
                    <fullName>The Financier is satisfied as to its &apos;know your customer&apos; or similar identification and verification checks and procedures</fullName>
                </value>
                <value>
                    <fullName>The results of all searches, enquires and requisitions on the Financier&apos;s behalf with respect to each Obligor and the Secured Property, including all searches of the Personal Property Securities Register in respect of the Secured Property &amp; each Obligor.</fullName>
                </value>
                <value>
                    <fullName>A valuation in respect of each real property (if any)</fullName>
                </value>
                <value>
                    <fullName>Confirmation that the establishment fee specified in Item 3 of Schedule 1 (Variables Schedule) was paid on or before the date specified in Item 3 of Schedule 1 (Variables Schedule</fullName>
                </value>
                <value>
                    <fullName>A copy of the Sale and Purchase agreement and any relevant document associated with a purchase, takeover or merger in respect of the [assets/shares] Target</fullName>
                </value>
                <value>
                    <fullName>Receipt of drawdown / rollover notices no later than 3 business days prior to the drawdown / rollover date</fullName>
                </value>
                <value>
                    <fullName>No Event of Default, Event of Review or potential Event of Default is subsisting or will result from the provision of the drawdown funds</fullName>
                </value>
                <value>
                    <fullName>Representations and Warranties are true and correct</fullName>
                </value>
                <value>
                    <fullName>All necessary authorisations for the drawdown have been obtained</fullName>
                </value>
                <value>
                    <fullName>Due diligence reports prepared by a relevant expert in relation to the acquisition, including (but not limited to): accounting, tax, legal, technical, environment and marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Type__c</fullName>
        <label>Condition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction Documents</fullName>
                </value>
                <value>
                    <fullName>Legal Opinion</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Corporate Structure</fullName>
                </value>
                <value>
                    <fullName>Shareholder Loan Agreement</fullName>
                </value>
                <value>
                    <fullName>Fees and Expenses</fullName>
                </value>
                <value>
                    <fullName>Verification Certificate</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Keyman Insurance</fullName>
                </value>
                <value>
                    <fullName>Corporate Benefit</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Hedging</fullName>
                </value>
                <value>
                    <fullName>KYC</fullName>
                </value>
                <value>
                    <fullName>Searches</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Valuations</fullName>
                </value>
                <value>
                    <fullName>Establishment Fee</fullName>
                </value>
                <value>
                    <fullName>Guarantors Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Sale and Purchase Agreement</fullName>
                </value>
                <value>
                    <fullName>Draw Notice</fullName>
                </value>
                <value>
                    <fullName>No Default</fullName>
                </value>
                <value>
                    <fullName>Representations and Warranties</fullName>
                </value>
                <value>
                    <fullName>Authorisations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditions_Due_In__c</fullName>
        <formula>Due_Date2__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditions Due In:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conditions_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditions Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Satisfied__c</fullName>
        <description>Set date satisfied based on Status</description>
        <formula>IF( ISPICKVAL( Status__c , &quot;Satisfied&quot;), NOW(), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Satisfied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date2__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Loan_Lookup__r.LLC_BI__Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Lookup__c</fullName>
        <description>Lookup to Loan Object</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied</fullName>
                    <default>true</default>
                    <label>Not Satisfied</label>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conditions</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>